manifests/ruby-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ruby-app-service
spec:
  type: LoadBalancer
  selector:
    app: ruby-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
