manifests/ruby-app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ruby-app-ingress
spec:
  backend:
    serviceName: ruby-app-service
    servicePort: 80
